Elements are not aligned properly in issues table for some cases (#23979).
Patch by Marius BALTEANU.

git-svn-id: http://svn.redmine.org/redmine/trunk@15962 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -158,7 +158,7 @@ a.toggle-checkboxes { margin-left: 5px; padding-left: 12px; background: url(../i
 /***** Tables *****/
 table.list, .table-list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
 table.list th, .table-list-header { background-color:#EEEEEE; padding: 4px; white-space:nowrap; font-weight:bold; }
-table.list td {text-align:center; vertical-align:top; padding-right:10px;}
+table.list td {text-align:center; vertical-align:middle; padding-right:10px;}
 table.list td.id { width: 2%; text-align: center;}
 table.list td.name, table.list td.description, table.list td.subject, table.list td.comments, table.list td.roles {text-align: left;}
 table.list td.tick {width:15%}
